--- a/3220AndroidApp1/app/src/main/res/layout/main_activity_view.xml
+++ b/3220AndroidApp1/app/src/main/res/layout/main_activity_view.xml
@@ -7,17 +7,63 @@
     android:layout_height="match_parent"
     android:background="@color/splat_purple">
 
+    <!-- Top bar with a title -->
 
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/topBar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="80dp"-->
+<!--        android:background="@color/light_splat_purple"-->
+<!--        android:elevation="4dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent">-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/toolbarTitle"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:gravity="center"-->
+<!--            android:textStyle="bold"-->
+<!--            android:text="My Main Splatoon Weapons"-->
+<!--            android:textColor="@android:color/white"-->
+<!--            android:textSize="20sp" />-->
+<!--    </androidx.appcompat.widget.Toolbar>-->
 
     <!-- Container for images, positioned in the center -->
 
-    <!-- Bottom menu with 3 buttons -->
+    <!-- Text container for Title -->
+    <FrameLayout
+        android:id="@+id/topTextContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@color/light_splat_purple"
+        android:elevation="4dp"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/topTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Main Splatoon Weapons"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
+
+
+
     <FrameLayout
         android:id="@+id/imageContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toTopOf="@id/bottomMenu"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,6 +71,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
+    <!-- Bottom menu with 3 buttons -->
     <LinearLayout
         android:id="@+id/bottomMenu"
         android:layout_width="match_parent"
